CMS-893: Add itest module.